--- a/index.html
+++ b/index.html
@@ -57,13 +57,8 @@
             <h1 class="responsive-headline">Muhammad fachri kh</h1>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="www.instagram.com/fachrikhrrjl_/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/fachri505"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -105,8 +100,7 @@
                   <p class="address">
 						   <span>Muhammad fachri</span><br>
 						   <span>Kawali, Cianis<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
+                     </span>
 						   <span>+6282115359605</span><br>
                      <span>fachrikhrrjl_
                      </span>
@@ -180,7 +174,7 @@
 
                   <p>
                      Sebagai siswa yang mengikuti praktek pembuatan game untuk membuat game
-                     anak-anak dan sayamembuat game edukasi di seusia anak-anak
+                     anak-anak dan saya membuat game edukasi anak-anak
                   </p>
 
                </div>
@@ -209,15 +203,18 @@
             <p>mahir untuk menghasilkan konsep-konsep kreatif yang unik dan menarik, memadukan
                elemen-elemen desain modern dengan pemahaman mendalam akan prinsip-prinsip
                desain.
-               mampu mengubah ide-ide kompleks menjadi desain yang mudah dipahami dan
+               Mampu mengubah ide-ide kompleks menjadi desain yang mudah dipahami dan
                menarik bagi target audiens, baik dalam bentuk cetak maupun digital.
             </p>
 
 				<div class="bars">
 
 				   <ul class="skills">
+                  <p>Pemula
 					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
+                  <p>Menengah
 						<li><span class="bar-expand css"></span><em>CSS</em></li>
+                  <p>Menengah
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
 					</ul>
 
@@ -235,7 +232,7 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Get In Touch.</span></h1>
+               <h1><span>Berhubungan.</span></h1>
 
             </div>
 
@@ -278,8 +275,9 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.instagram.com/fachrikhrrjl_/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/fachri505"><i class="fa fa-github"></i></a></li>
+
             </ul>
 
          </div>
