--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Beranda</a></li>
             <li><a class="smoothscroll" href="#about">Tentang</a></li>
 	         <li><a class="smoothscroll" href="#resume">pengalaman</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Portofolio</a></li>
             <li><a class="smoothscroll" href="#contact">Kontak</a></li>
          </ul> <!-- end #nav -->
 
@@ -225,6 +226,160 @@
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
+
+<!-- Portfolio Section
+   ================================================== -->
+   <section id="portfolio">
+
+      <div class="row">
+
+         <div class="twelve columns collapsed">
+
+            <h1>Beberapa Karya Saya.</h1>
+
+            <!-- portfolio-wrapper -->
+            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+          	   <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-01" title="">
+                        <img alt="" src="images/portfolio/ee.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>HTML</h5>
+                              <p>Login</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="">
+                        <img alt="" src="images/portfolio/pp.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>flutter</h5>
+                              <p>tombol tambah</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-03" title="">
+                        <img alt="" src="images/portfolio/gg.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>Game Platformer</h5>
+                              <p>Desain untuk tampilan pelajaran</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-08" title="">
+                        <img alt="" src="images/portfolio/lll.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>flutter on hp</h5>
+                              <p>Login</p>
+          					   </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+          		</div>  <!-- item end -->
+
+            </div> <!-- portfolio-wrapper end -->
+
+         </div> <!-- twelve columns end -->
+
+
+         <!-- Modal Popup
+	      --------------------------------------------------------------- -->
+
+         <div id="modal-01" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/ee.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>HTML</h4>
+			      <p>Pmenbuatan website HTML dengan pengembangan web yang mengacu pada empat operasi utama terhadap data: Create (membuat), Read (membaca), Update (memperbarui), dan Delete (menghapus). Dalam konteks HTML, CRUD direalisasikan melalui penggunaan elemen-elemen seperti form untuk mengumpulkan data, tombol untuk memicu aksi, dan input untuk menerima masukan pengguna.</p>
+		      </div>
+
+            <div class="link-box">
+		         <a class="popup-modal-dismiss">Tutup</a>
+            </div>
+
+	      </div><!-- modal-01 End -->
+
+         <div id="modal-02" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/pp.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Flutter</h4>
+			      <p>Pembuatan flutter dengan menu menambah angka.</p>
+		      </div>
+
+            <div class="link-box">
+		         <a class="popup-modal-dismiss">Tutup</a>
+            </div>
+
+	      </div><!-- modal-02 End -->
+
+         <div id="modal-03" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/gg.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Game Platformer</h4>
+			      <p>Pembuatan Game di bagian desain, Ini mencakup pembuatan karakter, pengaturan latar belakang, pemilihan warna, tekstur, dan elemen desain lainnya untuk menciptakan pengalaman visual yang unik.</p>
+		      </div>
+
+            <div class="link-box">
+		         <a class="popup-modal-dismiss">Tutup</a>
+            </div>
+
+	      </div><!-- modal-03 End -->
+
+         <div id="modal-08" class="popup-modal mfp-hide">
+
+		      <img class="scale-with-grid" src="images/portfolio/lll.jpg" alt="" />
+
+		      <div class="description-box">
+			      <h4>Flutter</h4>
+			      <p>Pembuatan Flutter dengan login.Login dalam Flutter proses autentikasi yang memungkinkan pengguna untuk mengakses aplikasi dengan memasukkan kredensial mereka, seperti username dan password.</p>
+		      </div>
+
+            <div class="link-box">
+		         <a class="popup-modal-dismiss">Tutup</a>
+            </div>
+
+	      </div><!-- modal-01 End -->
+
+
+      </div> <!-- row End -->
+
+   </section> <!-- Portfolio Section End-->
 
    <section id="contact">
 
