--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1>Beberapa Karya Saya.</h1>
+            <h1>Beberapa Projek Saya.</h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
@@ -321,8 +321,8 @@
 		      <img class="scale-with-grid" src="images/portfolio/ee.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>HTML</h4>
-			      <p>Pmenbuatan website HTML dengan pengembangan web yang mengacu pada empat operasi utama terhadap data: Create (membuat), Read (membaca), Update (memperbarui), dan Delete (menghapus). Dalam konteks HTML, CRUD direalisasikan melalui penggunaan elemen-elemen seperti form untuk mengumpulkan data, tombol untuk memicu aksi, dan input untuk menerima masukan pengguna.</p>
+			      <h4>PHP</h4>
+			      <p>Pmenbuatan website PHP dengan pengembangan web PHP login proses autentikasi yang memungkinkan pengguna untuk mengakses bagian terbatas dari sebuah situs web atau aplikasi berbasis web.</p>
 		      </div>
 
             <div class="link-box">
