--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <img alt="" src="images/portfolio/ee.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>HTML</h5>
+          					      <h5>PHP</h5>
                               <p>Login</p>
           					   </div>
                         </div>
