--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
             <div class="ten columns">
 
-                  <p class="lead">Kami senang mendengar dari Anda. Jika Anda memiliki pertanyaan, umpan balik, atau ingin berbagi pengalaman dengan kami, jangan ragu untuk menghubungi kami melalui salah satu metode di bawah ini Untuk selanjutnya bisa kontak kami.
+                  <p class="lead"> Jika Anda memiliki pertanyaan, umpan balik, atau ingin berbagi pengalaman dengan kami, jangan ragu untuk menghubungi kami melalui salah satu metode di bawah ini Untuk selanjutnya bisa kontak kami.
                   </p>
 
             </div>
